--- a/.github/actions/setup_node/action.yml
+++ b/.github/actions/setup_node/action.yml
@@ -16,4 +16,4 @@ runs:
         node-version: ${{ steps.versions.outputs.nodejs }}
         token: ${{ github.token }}
         cache: 'npm'
-        cache-dependency-path: 'web/package-lock.json'
+        cache-dependency-path: 'frontend/package-lock.json'
