Fixes issue with nextauth not being able to connect

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -81,5 +81,5 @@ tasks:
     desc: Seeds the database
     dir: backend
     cmds:
-      - docker compose run backend -c "python manage.py createsuperuser --username=admin --email=admin@example.com --noinput"
-      - docker compose run backend -c "python manage.py changepassword admin" -it
+      - docker compose run backend python manage.py createsuperuser --username=admin --email=admin@example.com --noinput
+      - docker compose run backend python manage.py changepassword admin
