--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "test": "jest",
     "lint": "next lint",
-    "generate-client": "npx @openapitools/openapi-generator-cli generate -i http://0.0.0.0:8080/schema -g typescript-axios -o client"
+    "format": "eslint --fix .",
+    "generate-api-client": "npx @openapitools/openapi-generator-cli generate -i http://0.0.0.0:8080/schema -g typescript-axios -o client"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
@@ -19,7 +20,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
-    "axios": "^1.2.1",
+    "axios": "1.2.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "jwt-decode": "^3.1.2",
