--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "lint": "next lint",
     "format": "eslint --fix .",
-    "generate-api-client": "npx @openapitools/openapi-generator-cli generate -i http://0.0.0.0:8080/schema -g typescript-axios -o client"
+    "generate-api-client": "npx @openapitools/openapi-generator-cli generate -i http://0.0.0.0:8080/schema/ -g typescript-axios -o client"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
@@ -30,6 +30,7 @@
     "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
@@ -37,9 +38,12 @@
     "@faker-js/faker": "^7.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/url-parse": "^1.4.8",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "msw": "^0.49.3",
+    "next-router-mock": "^0.9.1-beta.0",
     "openapi-typescript-codegen": "^0.23.0"
   }
 }
