--- a/{{ cookiecutter.project_name }}/frontend/package.json
+++ b/{{ cookiecutter.project_name }}/frontend/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "{{ cookiecutter.project_name }}-frontend",
+  "description": "{{ cookiecutter.description }}",
+  "email": "{{ cookiecutter.email }}",
+  "author": "{{ cookiecutter.author }}",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
